src/test/ui/span/send-is-not-static-std-sync-2.stderr
error[E0597]: `x` does not live long enough
  --> $DIR/send-is-not-static-std-sync-2.rs:11:21
   |
LL |         Mutex::new(&x)
   |                     ^ borrowed value does not live long enough
LL |     };
   |     - `x` dropped here while still borrowed
...
LL | }
   | - borrowed value needs to live until here

error[E0597]: `x` does not live long enough
  --> $DIR/send-is-not-static-std-sync-2.rs:21:22
   |
LL |         RwLock::new(&x)
   |                      ^ borrowed value does not live long enough
LL |     };
   |     - `x` dropped here while still borrowed
...
LL | }
   | - borrowed value needs to live until here

error[E0597]: `x` does not live long enough
  --> $DIR/send-is-not-static-std-sync-2.rs:31:26
   |
LL |         let _ = tx.send(&x);
   |                          ^ borrowed value does not live long enough
LL |         (tx, rx)
LL |     };
   |     - `x` dropped here while still borrowed
...
LL | }
   | - borrowed value needs to live until here

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0597`.
